[package]
name = "two_integers_smallest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
overflow-checks = false
strip = "debuginfo"
debug = false
lto = "thin"
debug-assertions = false
codegen-units = 16
[dependencies]
